WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58791
REGRESSION: [Chromium Win] details-add-summary-1.html start crashing after
r84039
https://bugs.webkit.org/show_bug.cgi?id=58791
Summary
REGRESSION: [Chromium Win] details-add-summary-1.html start crashing after r8...
Hajime Morrita
Reported
2011-04-18 09:05:52 PDT
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Fhtml%2Fdetails-add-summary-1.html&showExpectations=true&group=%40ToT%20-%20chromium.org
Attachments
Patch
(1.42 KB, patch)
2011-04-18 09:29 PDT
,
Hajime Morrita
eric
: review+
eric
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2011-04-18 09:29:29 PDT
Created
attachment 90044
[details]
Patch
John Knottenbelt
Comment 2
2011-04-18 09:32:59 PDT
LGTM
Eric Seidel (no email)
Comment 3
2011-04-18 09:39:02 PDT
Comment on
attachment 90044
[details]
Patch I take it the chromium is the only port with <details> enabled?
Hajime Morrita
Comment 4
2011-04-18 09:46:47 PDT
> (From update of
attachment 90044
[details]
) > I take it the chromium is the only port with <details> enabled?
No, there is no ifdefs for <details>. But the crash is reproduced only there.
Hajime Morrita
Comment 5
2011-04-18 09:47:40 PDT
Anyway, thank you for reviewing Eric! I'm landing this.
Hajime Morrita
Comment 6
2011-04-18 09:49:11 PDT
Committed
r84152
: <
http://trac.webkit.org/changeset/84152
>
WebKit Review Bot
Comment 7
2011-04-18 12:20:55 PDT
http://trac.webkit.org/changeset/84152
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug