2011-04-18  MORITA Hajime  <morrita@google.com>

Reviewed by Eric Seidel.

        REGRESSION: [Chromium Win] details-add-summary-1.html start crashing after r84039
        https://bugs.webkit.org/show_bug.cgi?id=58791

        On refreshMainSummary(), findMainSummary() possibly releases oldSummary.
        We should guard it again RefPtr.

        * html/HTMLDetailsElement.cpp:
        (WebCore::HTMLDetailsElement::refreshMainSummary):

Canonical link: https://commits.webkit.org/73893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84152 268f45cc-cd09-0410-ab3c-d52691b4dbfc